--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang ="en">
     <head>
-        
         <meta charset="UTF-8">
         <meta name = "viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>INFO2180 Lab 1</title>
-        <link href="styles.css" rel="stylessheet" type="text/css"
+        <link href="styles.css" rel="stylessheet" type="text/css">
     </head>
     <body>
         <header>
