--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name = "viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>INFO2180 Lab 1</title>
-        <link href="styles.css" rel="stylessheet" type="text/css">
+        <link href="mystyles.css" rel="stylessheet" type="text/css">
     </head>
     <body>
         <header>
