--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name = "viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>INFO2180 Lab 1</title>
-        <link href= "mystyles.css" rel="stylessheet" type="text/css">
+        <link href= "mystyles.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <header>
@@ -21,6 +21,9 @@
                 space where I can make a difference in the lives of people so that they can have hope or aspire
                 to achieve great things. My dream is to contribute to causes that will leave a positive impact and
                 to better the world one day at a time. 
+
+                I find Web Development intesresting because it encompasses the fundamentals bout webpages from an
+                html standpoint vs softwares that allow you to create webpages.
             </p>
         </main>
         <footer>
